// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCardItem Component open Modal with LoginForm 1`] = `
<DocumentFragment>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-vzcucw-MuiCardActions-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u1vl96-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1gick0k-MuiSvgIcon-root"
        data-testid="FavoriteBorderOutlinedIcon"
        focusable="false"
        isactive="false"
        ishovered="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiBox-root css-0"
  >
    <a
      href="/menu//"
      sx="[object Object]"
    >
      <div
        class="MuiBox-root css-i6bazn"
      >
        <img
          class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-wlfvqy-MuiCardMedia-root"
          title=""
        />
      </div>
      <div
        class="MuiBox-root css-1oz0l0p"
      >
        <div
          class="MuiBox-root css-1li2dnr"
        />
      </div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1i5uusm-MuiTypography-root"
      />
    </a>
    <div
      class="MuiBox-root css-fn9sqf"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-yzrrk5-MuiTypography-root"
      >
        24min
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hxfzi3-MuiSvgIcon-root"
        data-testid="FiberManualRecordIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      <div
        class="MuiBox-root css-130uqyg"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
          data-testid="StarRateRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        />
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-169s3fh-MuiTypography-root"
    >
      $null
    </p>
  </div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-14100l0-MuiCardActions-root"
  >
    <b>
      ADD
    </b>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ShoppingCartCheckoutIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03L21 4.96 19.25 4l-3.7 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2zM12 2l4 4-4 4-1.41-1.41L12.17 7H8V5h4.17l-1.59-1.59L12 2z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`ProductCardItem Component should renders ProductCardItem component 1`] = `
<DocumentFragment>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-vzcucw-MuiCardActions-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-u1vl96-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1gick0k-MuiSvgIcon-root"
        data-testid="FavoriteBorderOutlinedIcon"
        focusable="false"
        isactive="false"
        ishovered="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiBox-root css-0"
  >
    <a
      href="/menu/product/123"
      sx="[object Object]"
    >
      <div
        class="MuiBox-root css-i6bazn"
      >
        <img
          class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-wlfvqy-MuiCardMedia-root"
          src="image.jpg"
          title="Product"
        />
      </div>
      <div
        class="MuiBox-root css-1oz0l0p"
      >
        <div
          class="MuiBox-root css-1ma6dsf"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1krnf8j-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Healthy
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-2mg4ts-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Trending
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1noanwr-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Supreme
            </span>
          </div>
        </div>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1i5uusm-MuiTypography-root"
      >
        Product
      </h6>
    </a>
    <div
      class="MuiBox-root css-fn9sqf"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-yzrrk5-MuiTypography-root"
      >
        36min
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hxfzi3-MuiSvgIcon-root"
        data-testid="FiberManualRecordIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      <div
        class="MuiBox-root css-130uqyg"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
          data-testid="StarRateRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m14.43 10-1.47-4.84c-.29-.95-1.63-.95-1.91 0L9.57 10H5.12c-.97 0-1.37 1.25-.58 1.81l3.64 2.6-1.43 4.61c-.29.93.79 1.68 1.56 1.09l3.69-2.8 3.69 2.81c.77.59 1.85-.16 1.56-1.09l-1.43-4.61 3.64-2.6c.79-.57.39-1.81-.58-1.81h-4.45z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          4
        </p>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-169s3fh-MuiTypography-root"
    >
      $10.99
    </p>
  </div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing css-14100l0-MuiCardActions-root"
  >
    <b>
      ADD
    </b>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ShoppingCartCheckoutIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-8.9-5h7.45c.75 0 1.41-.41 1.75-1.03L21 4.96 19.25 4l-3.7 7H8.53L4.27 2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2zM12 2l4 4-4 4-1.41-1.41L12.17 7H8V5h4.17l-1.59-1.59L12 2z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
